@@ -1,5 +1,12 @@
 2006-12-08  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
+	Make semaphores more robust.
+	* semaphore.hh: Return int values for windows' sem_*.
+	* semaphore.hxx: Check return values of sem_*. Use named semaphores
+          only on Darwin (otherwise use unammed semaphores).
+
+2006-12-08  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
 	Add a dummy implementation of sem_open for Windows.
 	* semaphore.hh: Don't check for LIBPORT_WIN32 since libport/windows.h
           properly defines WIN32 when LIBPORT_WIN32 is defined. Define
